remove login info

--- a/petitions/templates/header.html
+++ b/petitions/templates/header.html
@@ -200,12 +200,12 @@
               </ul>
             </li>
             {% else %}
-            <button
+            <!-- <button
               onclick="window.location.href='/login/'"
               class="material material-button material-shadow transition"
             >
               Login
-            </button>
+            </button> -->
             {% endif %}
           </ul>
         </div>
