add back login button

--- a/petitions/templates/header.html
+++ b/petitions/templates/header.html
@@ -148,12 +148,12 @@
               </li>
             </ul>
             {% else %}
-            <!-- <button
+            <button
               onclick="setCookie('hasSeenPopup', false, -1); window.location.href='/login/';"
               class="material material-button material-shadow transition"
             >
               Login
-            </button> -->
+            </button>
             {% endif %}
           </div>
           <button
@@ -200,12 +200,12 @@
               </ul>
             </li>
             {% else %}
-            <!-- <button
+            <button
               onclick="window.location.href='/login/'"
               class="material material-button material-shadow transition"
             >
               Login
-            </button> -->
+            </button>
             {% endif %}
           </ul>
         </div>
