--- a/petitions/templates/header.html
+++ b/petitions/templates/header.html
@@ -101,11 +101,17 @@
           ><i class="material-icons">menu</i></span
         >
         <ul class="list">
-          <!-- <li id="about" class="list-item left header-link-wrapper">
-                    <a id="about-link" class="modern-link material-icon-container header-link" href="/about">
-                        <i class="material-icons hidden">info_outline</i><span id="about-text">About</span>
-                    </a>
-                </li>
+          <li id="about" class="list-item left header-link-wrapper">
+            <a
+              id="about-link"
+              class="modern-link material-icon-container header-link"
+              href="/about"
+            >
+              <i class="material-icons hidden">info_outline</i
+              ><span id="about-text">About</span>
+            </a>
+          </li>
+          <!--
                 <li id="committees" class="list-item left header-link-wrapper">
                     <a id="committees-link" class="modern-link material-icon-container header-link" href="/committees">
                         <i class="material-icons hidden">groups</i><span id="about-text">Committees</span>
@@ -176,7 +182,7 @@
             </li>
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="/committees">Committees</a></li>
+            <!-- <li><a href="/committees">Committees</a></li> -->
             <li>
               <a target="_self" href="https://www.rit.edu/studentgovernment/"
                 >News</a
