--- a/petitions/templates/about.html
+++ b/petitions/templates/about.html
@@ -151,11 +151,11 @@ script>
                     title: "About",
                     body: [
                         "<h3>HISTORY</h3>",
-                        "Student Government President Ashley Carrington and Vice President Tyler Pierce (2014-2015) sought to improve engagement of RIT Students through a Petition site. The site creates a place for the RIT community to converse on important issues.",
-                        "To remain transparent, this site is an open source project available on <a class='text-underline text-highlight' target='_blank' href='https://github.com/ritstudentgovernment/PawPrints'>GitHub.</a>"
+                        "Our youthful Student Government President Samuel M. Sliman jeered and ridiculed our loving and devout Director of Technology Aadi Bajpai to successfully set up this platform to improve engagement of Vanderbilt Students through a Petition site. The site creates a place for the Vanderbilt student body to converse on important issues.,
+                        "This is based upon prior work by the RIT Student Government. To remain transparent, this site is an open source project available on <a class='text-underline text-highlight' target='_blank' href='https://github.com/aadibajpai/PawPrints'>GitHub</a>"
                     ],
                     style:"white-background",
-                    active: false
+                    active: true
                 },
                 {
                     title: "Moderation",
