make top nav visible

--- a/petitions/templates/about.html
+++ b/petitions/templates/about.html
@@ -40,10 +40,10 @@
                         <br>
                         <div class="history-section  icon-mid">
                             <div class="icon-img">
-                                <img src="/static/images/history.png">
+                                <!-- <img src="/static/images/history.png"> -->
                             </div>
                             <div class="text">
-                                Our youthful Student Government President Samuel M. Sliman jeered and ridiculed our loving and devout Director of Technology Aadi Bajpai to successfully set up this platform to improve engagement of Vanderbilt Students through a Petition site. The site creates a place for the Vanderbilt student body to converse on important issues.
+                                Our youthful Student Government President Samuel M. Sliman successfully jeered and ridiculed our loving and devout Director of Technology Aadi Bajpai into setting up this platform to improve engagement of Vanderbilt Students through a Petition site. The site creates a place for the Vanderbilt student body to converse on important issues.
                                 <br>
                                 <br>
                                 This is based upon prior work by the RIT Student Government. To remain transparent, this site is an open source project available on <a class='text-underline text-highlight' target='_blank' href='https://github.com/aadibajpai/PawPrints'>GitHub</a>
