--- a/petitions/templates/header.html
+++ b/petitions/templates/header.html
@@ -125,7 +125,7 @@
               href="https://studentorg.vanderbilt.edu/vsg/"
             >
               <i class="material-icons hidden">feed</i
-              ><span id="about-text">News</span>
+              ><span id="about-text">Meet VSG</span>
             </a>
           </li>
         </ul>
