--- a/petitions/templates/about.html
+++ b/petitions/templates/about.html
@@ -64,7 +64,7 @@
                             </div>
                             <br>
                             <div  class="text">
-                                Search for petitions and if a petition similar to yours already exists, sign that petition.This will help raise support for issue and help you better reach the minimum threshold of 200 signatures (as of 09/28/2014) for receiving an official Student Government response.
+                                Search for petitions and if a petition similar to yours already exists, sign that petition.This will help raise support for issue and help you better reach the minimum threshold of 200 signatures (as of 1/1/2024) for receiving an official Student Government response.
                             </div>
                         </div>
 
@@ -105,13 +105,10 @@
                         </div>
                         <br>
                         <div  class="text">
-                            Use of this site falls under the <a class='text-underline text-highlight' target='_blank' href='http://www.rit.edu/computerconduct/'>RIT Code of Conduct for Computer and Network Use.</a>
+                            Use of this site falls under the <a class='text-underline text-highlight' target='_blank' href='https://studenthandbook.vanderbilt.edu/sites/default/files/pdf/pdf_generator/20232024-student-handbook.pdf?1691614792'>Vanderbilt Student Handbook.</a>
                             <br>
                             <br>
-                            Student Government reserves the right to edit or remove any petition at any time for violating the Code of Conduct. This includes, but is not limited to, creating an intimidating, hostile or abusive environment for any member of the RIT community, or posting of any obscene, defamatory, threatening, or otherwise harassing petitions.
-                            <br>
-                            <br>
-                            When using this service, you agree to sign petitions from only one RIT Computer Account. Should you have access to more than one account, you will only sign from your primary student, faculty, or staff account.
+                            Vanderbilt Student Government reserves the right to edit or remove any petition at any time for violating the Code of Conduct. This includes, but is not limited to, creating an intimidating, hostile or abusive environment for any member of the RIT community, or posting of any obscene, defamatory, threatening, or otherwise harassing petitions.
                             <br>
                             <br>
                             Please exercise good judgment when using this service.
@@ -155,7 +152,7 @@ script>
                         "This is based upon prior work by the RIT Student Government. To remain transparent, this site is an open source project available on <a class='text-underline text-highlight' target='_blank' href='https://github.com/aadibajpai/PawPrints'>GitHub</a>"
                     ],
                     style:"white-background",
-                    active: true
+                    active: false
                 },
                 {
                     title: "Moderation",
