more content updates

--- a/petitions/templates/about.html
+++ b/petitions/templates/about.html
@@ -46,7 +46,7 @@
                                 Our youthful Student Government President Samuel M. Sliman successfully jeered and ridiculed our loving and devout Director of Technology Aadi Bajpai into setting up this platform to improve engagement of Vanderbilt Students through a Petition site. The site creates a place for the Vanderbilt student body to converse on important issues.
                                 <br>
                                 <br>
-                                This is based upon prior work by the RIT Student Government. To remain transparent, this site is an open source project available on <a class='text-underline text-highlight' target='_blank' href='https://github.com/aadibajpai/PawPrints'>GitHub</a>
+                                This is based upon prior work by the RIT Student Government. To remain transparent, this site is an open source project available on <a class='text-underline text-highlight' target='_blank' href='https://github.com/aadibajpai/roadmaps.today'>GitHub</a>
                                 <br>
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                             Use of this site falls under the <a class='text-underline text-highlight' target='_blank' href='https://studenthandbook.vanderbilt.edu/sites/default/files/pdf/pdf_generator/20232024-student-handbook.pdf?1691614792'>Vanderbilt Student Handbook.</a>
                             <br>
                             <br>
-                            Vanderbilt Student Government reserves the right to edit or remove any petition at any time for violating the Code of Conduct. This includes, but is not limited to, creating an intimidating, hostile or abusive environment for any member of the RIT community, or posting of any obscene, defamatory, threatening, or otherwise harassing petitions.
+                            Vanderbilt Student Government reserves the right to edit or remove any petition at any time for violating the Code of Conduct. This includes, but is not limited to, creating an intimidating, hostile or abusive environment for any member of the Vanderbilt community, or posting of any obscene, defamatory, threatening, or otherwise harassing petitions.
                             <br>
                             <br>
                             Please exercise good judgment when using this service.
